2023.07.26
 + monitor command

2023.07.23
 + show user full info
 + Update username by effective UID by PID
 + add option -noeuid for wtmp/btmp
 * update pkg/notify

2023.07.20
 + notify mode
 + "log.go"
 + "signal.go"

2023.07.19
 * start project
 + add README.md
 * fix date/time format
 + add net.IP usage
 + add utmp.UsersStat and `stat` command