@@ -3,3 +3,4 @@
 [+] add analyzes of real UID, EUID of logon process
 [+] добавить статистику входов для одного пользователя
 [+] добавить компонент отслеживания логинов в реальном времени (notify)
+[-] разобраться с пользователями REMOTE_X
